--- a/src/pages/PokePage/styles.css
+++ b/src/pages/PokePage/styles.css
@@ -1,8 +1,6 @@
 .home-page__main {
-  background: var(--main-gradient);
   min-height: 100vh;
   text-align: center;
-  padding: 1rem;
 
   display: flex;
   flex-direction: column;
@@ -15,6 +13,10 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 2rem;
+  padding: 1rem;
+
+  height: 100vh;
+  width: 100vw;
 }
 
 @media (min-width: 468px) {
@@ -39,7 +41,8 @@
 
 @media (min-width: 768px) {
   .home-page__main {
-    background: rgb(184, 110, 110);
+    /* background-color: rgb(184, 110, 110); */
+
     height: 100vh;
     text-align: center;
     padding: 1rem;
@@ -59,7 +62,7 @@
     padding: 1rem;
 
     border-radius: 15px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.4);
 
     display: flex;
     flex-direction: column;
